--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <h1>Scheikunde</h1>
   <h2>Een samenvatting van de basisbeginselen</h2>
-  <img src="https://github.com/beas-site/Scheikunde/tree/81f8712f1300288cc836920804e3d12600182a2b">
+  <img src="Scheikunde/JJ.png">
 
 
 
