--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <h1>Scheikunde</h1>
   <h2>Een samenvatting van de basisbeginselen</h2>
-  <img src="/Scheikunde/JJ.png">
+  <img src="beas-site/Scheikunde/JJ.png">
 
 
 
