--- a/index.html
+++ b/index.html
@@ -17,7 +17,19 @@
   <h2>Een samenvatting van de basisbeginselen</h2>
   <img src="beas-site/Scheikunde/JJ.png">
 
-
+  <div id="gedicht">
+<p>uit niets ben jij gekomen<br>
+tot niets zal jij vergaan<br>
+<br>
+uit niets ben ik gaan leven<br>
+uit niets kan ik bestaan<br>
+<br>
+uit niets ben ik gekomen<br>
+tot niets zal ik  vergaan<br>
+<br>
+uit niets ben jij gaan  leven<br>
+uit niets kan  jij bestaan<br>
+    </p>
 
   
   </body>
