--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ tot niets zal ik  vergaan<br>
 uit niets ben jij gaan  leven<br>
 uit niets kan  jij bestaan<br>
     </p>
-
+<div>
   
   </body>
 </html>
