--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <h1>Scheikunde</h1>
   <h2>Een samenvatting van de basisbeginselen</h2>
-  <p><img src="JJ.png"></p>
+  <p><img src="beas-site/Scheikunde/JJ.png"></p>
 
   <div id="gedicht">
 <p>uit niets ben jij gekomen<br>
@@ -30,7 +30,7 @@ tot niets zal ik  vergaan<br>
 uit niets ben jij gaan  leven<br>
 uit niets kan  jij bestaan<br>
     </p>
-<div>
+</div>
   
   </body>
 </html>
