--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <h1>Scheikunde</h1>
+  <h1 id="h1_1" class="h1">Scheikunde</h1>
   <h2>Een samenvatting van de basisbeginselen</h2>
   <p><img src="beas-site/Scheikunde/JJ.png"></p>
 
@@ -31,7 +31,25 @@ uit niets ben jij gaan  leven<br>
 uit niets kan  jij bestaan<br>
     </p>
 </div>
-  
+  <h2 id="h2_1" class="h2">1.	Stoffen, stofeigenschappen en dichtheid</h2>
+  <p>Alles om ons heen in het gehele heelal, bestaat uit stoffen en dat zijn er miljoenen, miljoenen en miljoenen<br>
+    (bv. hout, plastic, ijzer, grond, lucht, dieren, planten, mensen, bacteriën, water, olie etc.).
+Elke stof heeft bepaalde eigenschappen:
+•	kleur;
+•	smaak;
+•	oplosbaarheid;
+•	brandbaarheid;
+•	fase bij kamertemperatuur;
+•	kookpunt;
+•	smeltpunt;
+•	dichtheid.
+
+Kookpunt, smeltpunt en dichtheid zijn stofconstanten, omdat je ze met een getal kan aangeven, gevolgd door een éénheid. 
+
+Het kookpunt van water is bijvoorbeeld 100 graden Celsius.
+ 
+De dichtheid is het gewicht van een stof per 1 cm3.
+  </p>
   </body>
 </html>
 
