--- a/index.html
+++ b/index.html
@@ -35,15 +35,16 @@ uit niets kan  jij bestaan<br>
   <p>Alles om ons heen in het gehele heelal, bestaat uit stoffen en dat zijn er miljoenen, miljoenen en miljoenen<br>
     (bv. hout, plastic, ijzer, grond, lucht, dieren, planten, mensen, bacteriën, water, olie etc.).
 Elke stof heeft bepaalde eigenschappen:
-•	kleur;
-•	smaak;
-•	oplosbaarheid;
-•	brandbaarheid;
-•	fase bij kamertemperatuur;
-•	kookpunt;
-•	smeltpunt;
-•	dichtheid.
-
+<ul>
+  <li>kleur;</li>
+  <li>smaak;</li>
+  <li>oplosbaarheid;</li>
+  <li>brandbaarheid;</li>
+  <li>fase bij kamertemperatuur;</li>
+  <li>kookpunt;</li>
+  <li>smeltpunt;</li>
+  <li>dichtheid.</li>
+  </ul>
 Kookpunt, smeltpunt en dichtheid zijn stofconstanten, omdat je ze met een getal kan aangeven, gevolgd door een éénheid. 
 
 Het kookpunt van water is bijvoorbeeld 100 graden Celsius.
