--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@ uit niets ben jij gaan  leven<br>
 uit niets kan  jij bestaan<br>
     </p>
 </div>
-  <h2 id="h2_1" class="h2">1.	Stoffen, stofeigenschappen en dichtheid</h2>
+  <h2 id="h2_1" class="h2">Stoffen, stofeigenschappen en dichtheid</h2>
   <p>Alles om ons heen in het gehele heelal, bestaat uit stoffen en dat zijn er miljoenen, miljoenen en miljoenen<br>
-    (bv. hout, plastic, ijzer, grond, lucht, dieren, planten, mensen, bacteriën, water, olie etc.).
+    (bv. hout, plastic, ijzer, grond, lucht, dieren, planten, mensen, bacteriën, water, olie etc.).<br>
     Elke stof heeft bepaalde eigenschappen:</p>
 <ul>
   <li>kleur;</li>
