--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ uit niets kan  jij bestaan<br>
   <h2 id="h2_1" class="h2">Stoffen, stofeigenschappen en dichtheid</h2>
   <p>Alles om ons heen in het gehele heelal, bestaat uit stoffen en dat zijn er miljoenen, miljoenen en miljoenen<br>
     (bv. hout, plastic, ijzer, grond, lucht, dieren, planten, mensen, bacteriën, water, olie etc.).<br>
-    Elke stof heeft bepaalde eigenschappen:</p>
+    Elke stof heeft bepaalde eigenschappen:<br>
 <ul>
   <li>kleur;</li>
   <li>smaak;</li>
@@ -45,7 +45,8 @@ uit niets kan  jij bestaan<br>
   <li>smeltpunt;</li>
   <li>dichtheid.</li>
   </ul>
-<p>Kookpunt, smeltpunt en dichtheid zijn stofconstanten, omdat je ze met een getal kan aangeven, gevolgd door een éénheid.<br>
+  <br>
+Kookpunt, smeltpunt en dichtheid zijn stofconstanten, omdat je ze met een getal kan aangeven, gevolgd door een éénheid.<br>
 <br>
 Het kookpunt van water is bijvoorbeeld 100 graden Celsius.<br>
 <br>
