--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <h1 id="h1_1" class="h1">Scheikunde</h1>
   <h2>Een samenvatting van de basisbeginselen</h2>
-  <p><img src="beas-site/Scheikunde/JJ.png"></p>
+  <p><img src="/JJ.png"></p>
 
   <div id="gedicht">
 <p>uit niets ben jij gekomen<br>
@@ -25,12 +25,13 @@ uit niets ben ik gaan leven<br>
 uit niets kan ik bestaan<br>
 <br>
 uit niets ben ik gekomen<br>
-tot niets zal ik  vergaan<br>
+tot niets zal ik vergaan<br>
 <br>
-uit niets ben jij gaan  leven<br>
+uit niets ben jij gaan leven<br>
 uit niets kan  jij bestaan<br>
     </p>
 </div>
+  
   <h2 id="h2_1" class="h2">Stoffen, stofeigenschappen en dichtheid</h2>
   <p>Alles om ons heen in het gehele heelal, bestaat uit stoffen en dat zijn er miljoenen, miljoenen en miljoenen<br>
     (bv. hout, plastic, ijzer, grond, lucht, dieren, planten, mensen, bacteriën, water, olie etc.).<br>
