--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <h1 id="h1_1" class="h1">Scheikunde</h1>
   <h2>Een samenvatting van de basisbeginselen</h2>
-  <p><img src="beas-site/Scheikunde/JJ.png"></p>
+  <p><img src="beas-site/Scheikunde/JJ.png" alt="Jip en Janneker" width=500></p>
 
   <div id="gedicht">
 <p>uit niets ben jij gekomen<br>
