--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <h1 id="h1_1" class="h1">Scheikunde</h1>
   <h2>Een samenvatting van de basisbeginselen</h2>
-  <img src="beas-site/Scheikunde/JJ.png" alt="Jip en Janneke" width=500>
+  <img src="beas-site/Scheikunde/JJ.png" alt="Jip en Janneke" width="500">
 
   <div id="gedicht">
 <p>uit niets ben jij gekomen<br>
