--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <h1 id="h1_1" class="h1">Scheikunde</h1>
   <h2>Een samenvatting van de basisbeginselen</h2>
-  <img src="https://github.com/beas-site/Scheikunde/blob/master/JJ.png" alt="Jip en Janneke" width="300">
+  <img src="https://4.bp.blogspot.com/-sC1kpLXKzDA/VAByloRPDAI/AAAAAAAAAdw/1Gk4hy7DGis/w530-h389-p-k/jip%2Ben%2Bjanneke.png" alt="Jip en Janneke" width="300">
 
   <div id="gedicht">
 <p>uit niets ben jij gekomen<br>
