--- a/index.html
+++ b/index.html
@@ -13,6 +13,46 @@
 </head>
 
 <body>
+  <header>    
+  <img src="Afbeelding8.jpg" width="200" alt="Logo van de duppies" style="float:right;position:absolute;top:25px;right:25px;width:10.48%">
+  <h1 class="classh1"> Duppies-site &#128521</h1>
+  <ul id="idheader">
+  <li class="liheader"><a href="#home">Home</a></li>
+  <li class="liheader"><a href="#news">News</a></li>
+  <li class="liheader"><a href="#contact">Contact</a></li>
+  <li class="liheader"><a href="#about">About</a></li>
+</ul>
+  </header>
+<section>
+  <nav>
+    <ol id="idsitebar">
+      <li class="lisite"><a href="#">London</a></li>
+      <li class="lisite"><a href="#">Paris</a></li>
+      <li class="lisite"><a href="#">Tokyo</a></li>
+    </ol>
+  </nav>
+  
+  <article>
+    <h1>London</h1>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+  </article>
+</section>
+
+<footer>
+  <p>Footer</p>
+</footer>
+
+<p>If we try to display an image that does not exist, the value of the alt attribute will be displayed instead. </p>
+
+<!-- contact -->
+<address>
+Written by John Doe.<br> 
+Visit us at:<br>
+Example.com<br>
+Box 564, Disneyland<br>
+USA
+</address>
   <h1 id="h1_1" class="h1">Scheikunde</h1>
   <h2>Een samenvatting van de basisbeginselen</h2>
   <img src="https://4.bp.blogspot.com/-sC1kpLXKzDA/VAByloRPDAI/AAAAAAAAAdw/1Gk4hy7DGis/w530-h389-p-k/jip%2Ben%2Bjanneke.png" alt="Jip en Janneke" width="300">
