--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 
 <body>
   <header>    
-  <img src="Afbeelding8.jpg" width="200" alt="Logo van de duppies" style="float:right;position:absolute;top:25px;right:25px;width:10.48%">
-  <h1 class="classh1"> Duppies-site &#128521</h1>
+  <h1 class="classh1"> Scheikunde &#128521</h1>
   <ul id="idheader">
   <li class="liheader"><a href="#home">Home</a></li>
   <li class="liheader"><a href="#news">News</a></li>
