--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@ uit niets kan  jij bestaan<br>
     </p>
 </div>
   
+    <div id="inhoud">
+      <h2>Inhoud:</h2>
+      <ol>
+        <li><a href="#h2_1">Stoffen, stofeigenschappen en dichtheid</a>
+    </div>
+    
   <h2 id="h2_1" class="h2">Stoffen, stofeigenschappen en dichtheid</h2>
   <p>Alles om ons heen in het gehele heelal, bestaat uit stoffen en dat zijn er miljoenen, miljoenen en miljoenen<br>
     (bv. hout, plastic, ijzer, grond, lucht, dieren, planten, mensen, bacteriën, water, olie etc.).<br>
