--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@ Het kookpunt van water is bijvoorbeeld 100 graden Celsius.<br>
 <br>
 De dichtheid is het gewicht van een stof per 1 cm3.
   </p>
+  
+  <div id="bronnen">
+  <h2 id="h2bronnen">Bronnen:</h2>
+  <ol>
+    <li>bron 1</li>
+    </ol>
   </article>
 </section>
 
