--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ De dichtheid is het gewicht van een stof per 1 cm3.
   <div id="bronnen">
   <h2 id="h2bronnen">Bronnen:</h2>
   <ol>
-    <li>bron 1</li>
+    <li>Kooij, S. (2013, september 7).01 Stoffen, stofeigenschappen en dichtheid[Video file]. Retrieved from https://www.youtube.com/watch?v=B3hDRoaY0YE</li>
     </ol>
   </article>
 </section>
