--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@ Het kookpunt van water is bijvoorbeeld 100 graden Celsius.<br>
 <br>
 De dichtheid is het gewicht van een stof per 1 cm3.
   </p>
+   <h2 id="h2_2" class="h2">2.	Atomen en moleculen</h2>
+  
   
   <div id="bronnen">
   <h2 id="h2bronnen">Bronnen:</h2>
