--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ uit niets kan  jij bestaan<br>
       <h2>Inhoud:</h2>
       <ol>
         <li><a href="#h2_1">Stoffen, stofeigenschappen en dichtheid</a>
+         <li><a href="#h2_2">Atomen en moleculen</a> 
       </ol>
     </div>
     
@@ -79,7 +80,7 @@ Het kookpunt van water is bijvoorbeeld 100 graden Celsius.<br>
 <br>
 De dichtheid is het gewicht van een stof per 1 cm3.
   </p>
-   <h2 id="h2_2" class="h2">2.	Atomen en moleculen</h2>
+   <h2 id="h2_2" class="h2">Atomen en moleculen</h2>
   
   
   <div id="bronnen">
