--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   
   <article>
   <h2>Een samenvatting van de basisbeginselen</h2>
-  <img src="https://4.bp.blogspot.com/-sC1kpLXKzDA/VAByloRPDAI/AAAAAAAAAdw/1Gk4hy7DGis/w530-h389-p-k/jip%2Ben%2Bjanneke.png" alt="Jip en Janneke" width="300">
+  <img src="https://4.bp.blogspot.com/-sC1kpLXKzDA/VAByloRPDAI/AAAAAAAAAdw/1Gk4hy7DGis/w530-h389-p-k/jip%2Ben%2Bjanneke.png" alt="Afbeeldinig van Jip en Janneke" width="300">
 
   <div id="gedicht">
 <p>uit niets ben jij gekomen<br>
@@ -81,7 +81,7 @@ Het kookpunt van water is bijvoorbeeld 100 graden Celsius.<br>
 De dichtheid is het gewicht van een stof per 1 cm3.
   </p>
    <h2 id="h2_2" class="h2">Atomen en moleculen</h2>
-  
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcT9j6YnqmWvFuCFivYx66_urJg8y-Kuok9hpg&usqp=CAU" alt="Afbeelding van een atoom" width="300">
   
   <div id="bronnen">
   <h2 id="h2bronnen">Bronnen:</h2>
