--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ Het kookpunt van water is bijvoorbeeld 100 graden Celsius.<br>
 De dichtheid is het gewicht van een stof per 1 cm3.
   </p>
    <h2 id="h2_2" class="h2">Atomen en moleculen</h2>
+  <p>Het atoom bestaat uit:</p>
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcT9j6YnqmWvFuCFivYx66_urJg8y-Kuok9hpg&usqp=CAU" alt="Afbeelding van een atoom" width="300">
   
   <div id="bronnen">
