--- a/index.html
+++ b/index.html
@@ -83,7 +83,26 @@ De dichtheid is het gewicht van een stof per 1 cm3.
    <h2 id="h2_2" class="h2">Atomen en moleculen</h2>
   <p>Het atoom bestaat uit:</p>
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcT9j6YnqmWvFuCFivYx66_urJg8y-Kuok9hpg&usqp=CAU" alt="Afbeelding van een atoom" width="300">
-  
+<p>Een atoom is opgebouwd uit protonen, neutronen en elektronen. Een atoom is ondeelbaar en komt van het Griekse woord atomos wat ondeelbaar betekent.<br>
+Elke atoomsoort heeft een symbool en er bestaan ongeveer 110 soorten atomen.<br>
+Eigenschappen van protonen, neutronen en elektronen:
+<table id="tableprotonsneutronselectrons">
+  <thead>
+    <tr>
+      <th>Onderdeel</th>
+      <th>Massa</th>
+      <th>Lading</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>protonen</td>
+      <td>1 u</td>
+      <td>+ 1</td>
+    </tr>
+  </tbody>
+        
+  </p>
   <div id="bronnen">
   <h2 id="h2bronnen">Bronnen:</h2>
   <ol>
