--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@ Eigenschappen van protonen, neutronen en elektronen:
       <td>+ 1</td>
     </tr>
   </tbody>
-        
+  </table>
+  
   </p>
   <div id="bronnen">
   <h2 id="h2bronnen">Bronnen:</h2>
