--- a/index.html
+++ b/index.html
@@ -100,6 +100,16 @@ Eigenschappen van protonen, neutronen en elektronen:
       <td>1 u</td>
       <td>+ 1</td>
     </tr>
+     <tr>
+      <td>neutronen</td>
+      <td>1 u</td>
+      <td>0</td>
+    </tr>
+     <tr>
+      <td>electronen</td>
+      <td>0</td>
+      <td>- 1</td>
+    </tr>
   </tbody>
   </table>
   
