--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Eigenschappen van protonen, neutronen en elektronen:
 <table id="tableprotonsneutronselectrons">
   <thead>
     <tr>
-      <th>Onderdeel</th>
+      <th>Atoomonderdeel</th>
       <th>Massa</th>
       <th>Lading</th>
     </tr>
