--- a/index.html
+++ b/index.html
@@ -112,7 +112,26 @@ Eigenschappen van protonen, neutronen en elektronen:
     </tr>
   </tbody>
   </table>
-  
+De protonen en neutronen, welke tesamen nucleonen worden genoemd, bevinden zich in de kern en de kern is altijd positief geladen.<br>
+De elektronen die in vaste banen, orbitalen genoemd, om de kern heen bewegen zijn negatief geladen.<br>
+De u staat voor atomaire massa-eenheid (of uiterst klein beetje) en is gelijk aan 1,66 x 10-27 (zie Binas tabel 6). De massa van een atoom zit dus in de kern.<br>
+<br>
+Wat betekent het atoomnummer?<br>
+Het atoomnummer betekent het aantal protonen in de kern en wordt aangeduid met het symbool Z.<br>
+<br>
+Wat betekent het massagetal?<br>
+Het aantal protonen plus het aantal neutronen en wordt aangeduid met het symbool A.<br>
+<br>
+Een atoom kan neutraal of geladen zijn.<br>
+In een neutraal atoom zitten evenveel protonen als elektronen.<br>
+In een geladen atoom zitten meer of minder elektronen dan protonen. Dit wordt rechtsboven het atoom aangegeven. <br>
+Bv.  Natrium<br>
+Na+1  heeft een massagetal van 23 en een atoomnummer van 11. Natrium heeft een atoommassa van 23 u. <br>
+Omdat het atoomnummer 11 is, zitten er 11 protonen in de kern. Omdat het massagetal 23 is en omdat er 11 protonen zijn,<br>
+moeten er 23 - 11 = 12 neutronen zijn.<br>
+De +1 geeft aan dat er 1 proton meer in de kern zit dan dat er elektronen zijn, dus er zijn in dat geval 10 elektronen.<br>
+Een geladen atoom wordt een ion genoemd.<br>
+
   </p>
   <div id="bronnen">
   <h2 id="h2bronnen">Bronnen:</h2>
