--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <li class="liheader"><a href="#news">News</a></li>
   <li class="liheader"><a href="#contact">Contact</a></li>
   <li class="liheader"><a href="#about">About</a></li>
+    <li class="liheader"><input type="text" placeholder="Zoek.."></li>
 </ul>
   </header>
 <section>
