--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
   <li class="liheader"><a href="#news">News</a></li>
   <li class="liheader"><a href="#contact">Contact</a></li>
   <li class="liheader"><a href="#about">About</a></li>
-    <li class="liheader"><input type="text" placeholder="Zoek.."></li>
 </ul>
   </header>
 <section>
@@ -29,6 +28,7 @@
       <li class="lisite"><a href="#">London</a></li>
       <li class="lisite"><a href="#">Paris</a></li>
       <li class="lisite"><a href="#">Tokyo</a></li>
+      <li class="lisite"><input type="text" placeholder="Zoek.."></li>
     </ol>
   </nav>
   
