--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ Een geladen atoom wordt een ion genoemd.<br>
 </footer>
 
 <!-- contact -->
-<address>
+<address id="contact">
 Written by John Doe.<br> 
 Visit us at:<br>
 Example.com<br>
