--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ Eigenschappen van protonen, neutronen en elektronen:
   <br>
 De protonen en neutronen, welke tesamen nucleonen worden genoemd, bevinden zich in de kern en de kern is altijd positief geladen.<br>
 De elektronen die in vaste banen, orbitalen genoemd, om de kern heen bewegen zijn negatief geladen.<br>
-De u staat voor atomaire massa-eenheid (of uiterst klein beetje) en is gelijk aan 1,66 x 10-27 (zie Binas tabel 6). De massa van een atoom zit dus in de kern.<br>
+De u staat voor atomaire massa-eenheid (of uiterst klein beetje) en is gelijk aan 1,66 x 10<sup>-27</sup> (zie Binas tabel 6). De massa van een atoom zit dus in de kern.<br>
 <br>
 Wat betekent het atoomnummer?<br>
 Het atoomnummer betekent het aantal protonen in de kern en wordt aangeduid met het symbool Z.<br>
