--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ Na+1  heeft een massagetal van 23 en een atoomnummer van 11. Natrium heeft een a
 Omdat het atoomnummer 11 is, zitten er 11 protonen in de kern. Omdat het massagetal 23 is en omdat er 11 protonen zijn,<br>
 moeten er 23 - 11 = 12 neutronen zijn.<br>
 De +1 geeft aan dat er 1 proton meer in de kern zit dan dat er elektronen zijn, dus er zijn in dat geval 10 elektronen.<br>
-Een geladen atoom wordt een ion genoemd.<br>
+  Een geladen atoom wordt een <em>ion</em> genoemd.<br>
 
   </p>
   <div id="bronnen">
