--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@ Een atoom kan neutraal of geladen zijn.<br>
 In een neutraal atoom zitten evenveel protonen als elektronen.<br>
 In een geladen atoom zitten meer of minder elektronen dan protonen. Dit wordt rechtsboven het atoom aangegeven. <br>
 Bv.  Natrium<br>
-Na+1  heeft een massagetal van 23 en een atoomnummer van 11. Natrium heeft een atoommassa van 23 u. <br>
+Na<sup>+1</sup>  heeft een massagetal van 23 en een atoomnummer van 11. Natrium heeft een atoommassa van 23 u. <br>
 Omdat het atoomnummer 11 is, zitten er 11 protonen in de kern. Omdat het massagetal 23 is en omdat er 11 protonen zijn,<br>
 moeten er 23 - 11 = 12 neutronen zijn.<br>
-De +1 geeft aan dat er 1 proton meer in de kern zit dan dat er elektronen zijn, dus er zijn in dat geval 10 elektronen.<br>
-  Een geladen atoom wordt een <em>ion</em> genoemd.<br>
+De <sup>+1</sup> geeft aan dat er 1 proton meer in de kern zit dan dat er elektronen zijn, dus er zijn in dat geval 10 elektronen.<br>
+Een geladen atoom wordt een <em>ion</em> genoemd.<br>
 
   </p>
   <div id="bronnen">
