--- a/index.html
+++ b/index.html
@@ -131,8 +131,9 @@ Na<sup>+1</sup>  heeft een massagetal van 23 en een atoomnummer van 11. Natrium 
 Omdat het atoomnummer 11 is, zitten er 11 protonen in de kern. Omdat het massagetal 23 is en omdat er 11 protonen zijn,<br>
 moeten er 23 - 11 = 12 neutronen zijn.<br>
 De <sup>+1</sup> geeft aan dat er 1 proton meer in de kern zit dan dat er elektronen zijn, dus er zijn in dat geval 10 elektronen.<br>
-Een geladen atoom wordt een <em>ion</em> genoemd.<br>
+Een geladen atoom wordt een <em>ion</em> genoemd.<br><br>
 
+Een Fe<sup>2+</sup> ion wordt genoteerd als FE(II) en een Fe<sup>3+</sup> ion als FE(III).<br>
   </p>
   <div id="bronnen">
   <h2 id="h2bronnen">Bronnen:</h2>
