--- a/index.html
+++ b/index.html
@@ -134,6 +134,11 @@ De <sup>+1</sup> geeft aan dat er 1 proton meer in de kern zit dan dat er elektr
 Een geladen atoom wordt een <em>ion</em> genoemd.<br><br>
 
 Een Fe<sup>2+</sup> ion wordt genoteerd als FE(II) en een Fe<sup>3+</sup> ion als FE(III).<br>
+Een molecuul is een kluitje of groepje atomen.
+De kleinste molecuul bestaat uit twee atomen aan elkaar.
+De grootste molecuul bestaat uit miljoenen atomen aan elkaar.
+Bijvoorbeeld:  Water is een molecuul en bestaat uit twee waterstofatomen en één zuurstofatoom.
+  
   </p>
   <div id="bronnen">
   <h2 id="h2bronnen">Bronnen:</h2>
