--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@ moeten er 23 - 11 = 12 neutronen zijn.<br>
 De <sup>+1</sup> geeft aan dat er 1 proton meer in de kern zit dan dat er elektronen zijn, dus er zijn in dat geval 10 elektronen.<br>
 Een geladen atoom wordt een <em>ion</em> genoemd.<br><br>
 
-Een Fe<sup>2+</sup> ion wordt genoteerd als FE(II) en een Fe<sup>3+</sup> ion als FE(III).<br>
-Een molecuul is een kluitje of groepje atomen.
-De kleinste molecuul bestaat uit twee atomen aan elkaar.
-De grootste molecuul bestaat uit miljoenen atomen aan elkaar.
-Bijvoorbeeld:  Water is een molecuul en bestaat uit twee waterstofatomen en één zuurstofatoom.
+Een Fe<sup>2+</sup> ion wordt genoteerd als FE(II) en een Fe<sup>3+</sup> ion als FE(III).<br><br>
+Een molecuul is een kluitje of groepje atomen.<br>
+De kleinste molecuul bestaat uit twee atomen aan elkaar.<br>
+De grootste molecuul bestaat uit miljoenen atomen aan elkaar.<br>
+Bijvoorbeeld:  Water is een molecuul en bestaat uit twee waterstofatomen en één zuurstofatoom.<br>
   
   </p>
   <div id="bronnen">
