--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@ Een molecuul is een kluitje of groepje atomen.<br>
 De kleinste molecuul bestaat uit twee atomen aan elkaar.<br>
 De grootste molecuul bestaat uit miljoenen atomen aan elkaar.<br>
 Bijvoorbeeld:  Water is een molecuul en bestaat uit twee waterstofatomen en één zuurstofatoom.<br>
+<img src="https://www.groepsziel.nl/images/water-molecuul.jpg" alt="afbeelding model waterstofmolecuul"><br><br>
   
   </p>
   <div id="bronnen">
