--- a/index.html
+++ b/index.html
@@ -137,15 +137,15 @@ Een Fe<sup>2+</sup> ion wordt genoteerd als FE(II) en een Fe<sup>3+</sup> ion al
 Een molecuul is een kluitje of groepje atomen.<br>
 De kleinste molecuul bestaat uit twee atomen aan elkaar.<br>
 De grootste molecuul bestaat uit miljoenen atomen aan elkaar.<br>
-Bijvoorbeeld:  Water is een molecuul en bestaat uit twee waterstofatomen en één zuurstofatoom.<br>
+Bijvoorbeeld:  Water is een molecuul en bestaat uit twee waterstofatomen(H) en één zuurstofatoom(O).<br>
 <img src="https://www.groepsziel.nl/images/water-molecuul.jpg" width="100" alt="afbeelding model waterstofmolecuul"><br><br>
   
   </p>
   <div id="bronnen">
   <h2 id="h2bronnen">Bronnen:</h2>
   <ol>
-    <li>Kooij, S. (2013, september 7).01 Stoffen, stofeigenschappen en dichtheid[Video file]. Retrieved from <a href="https://www.youtube.com/watch?v=B3hDRoaY0YE">https://www.youtube.com/watch?v=B3hDRoaY0YE</li>
-    </a></ol>
+    <li>Kooij, S. (2013, september 7).01 Stoffen, stofeigenschappen en dichtheid[Video file]. Retrieved from <a href="https://www.youtube.com/watch?v=B3hDRoaY0YE">https://www.youtube.com/watch?v=B3hDRoaY0YE</a></li>
+</ol>
   </article>
 </section>
 
