--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@ Bijvoorbeeld:  Water is een molecuul en bestaat uit twee waterstofatomen(H) en Ã
   <h2 id="h2bronnen">Bronnen:</h2>
   <ol>
     <li>Kooij, S. (2013, september 7).01 Stoffen, stofeigenschappen en dichtheid[Video file]. Retrieved from <a href="https://www.youtube.com/watch?v=B3hDRoaY0YE">https://www.youtube.com/watch?v=B3hDRoaY0YE</a></li>
+    <li>Kooij, S. (2013, september 9).02 Atomen en moleculen[Video file]. Retrieved from <a href="https://www.youtube.com/watch?v=7SzSUxM5nZ0">https://www.youtube.com/watch?v=7SzSUxM5nZ0</a></li>
 </ol>
   </article>
 </section>
