--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@ uit niets kan  jij bestaan<br>
     <div id="inhoud">
       <h2>Inhoud:</h2>
       <ol>
-        <li><a href="#h2_1">Stoffen, stofeigenschappen en dichtheid</a>
-         <li><a href="#h2_2">Atomen en moleculen</a> 
+        <li><a href="#h2_1">Stoffen, stofeigenschappen en dichtheid</a></li>
+        <li><a href="#h2_2">Atomen en moleculen</a></li>
+        <li><a href="#h2_3">Het periodiek systeem</a></li> 
       </ol>
     </div>
     
@@ -140,6 +141,9 @@ De grootste molecuul bestaat uit miljoenen atomen aan elkaar.<br>
 Bijvoorbeeld:  Water is een molecuul en bestaat uit twee waterstofatomen(H) en één zuurstofatoom(O).<br>
 <img src="https://www.groepsziel.nl/images/water-molecuul.jpg" width="100" alt="afbeelding model waterstofmolecuul"><br><br>
   
+  </p>
+  <h2 id="h2_3" class="h2">Het periodiek systeem</h2>
+  <p>
   </p>
   <div id="bronnen">
   <h2 id="h2bronnen">Bronnen:</h2>
