--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ Het periodiek systeem is opgebouwd naar opklimmend atoomnummer:<br>
 Alle atoomsoorten kan je verdelen in metalen en niet-metalen. <br>
 Voor het woord atoomsoort kan je ook het woord element gebruiken. Een element is één atoomsoort.<br><br>
 
-In tabel 99 staan de metalen aan de linkerkant (geel), behalve waterstof, dat is een niet-metaal, maar staat toch aan de linkerkant.<br>
+In Binas tabel 99 staan de metalen aan de linkerkant (geel), behalve waterstof(H), dat is een niet-metaal, maar staat toch aan de linkerkant.<br>
 De niet-metalen staan rechts (blauw). Het is belangrijk te weten of een element een metaal is of een niet-metaal.<br><br>
 
 De <em>horizontale</em> rijen in tabel 99 worden periodes genoemd. Waterstof(H) en Helium(He) staan bijvoorbeeld in de eerste periode.<br>
