--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ Voor het woord atoomsoort kan je ook het woord element gebruiken. Een element is
 In Binas tabel 99 staan de metalen aan de linkerkant (geel), behalve waterstof(H), dat is een niet-metaal, maar staat toch aan de linkerkant.<br>
 De niet-metalen staan rechts (blauw). Het is belangrijk te weten of een element een metaal is of een niet-metaal.<br><br>
 
-De <em>horizontale</em> rijen in tabel 99 worden periodes genoemd. Waterstof(H) en Helium(He) staan bijvoorbeeld in de eerste periode.<br>
+De <em>horizontale</em> rijen in Binas tabel 99 worden periodes genoemd. Waterstof(H) en Helium(He) staan bijvoorbeeld in de eerste periode.<br>
 De <em>verticale</em> kolommen worden groepen genoemd, Lithium(li) staat bijvoorbeeld in de tweede periode en in de eerste groep.<br>
 Elementen uit één groep hebben vergelijkbare chemische reacties.<br><br>
 
