--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ Elementen uit één groep hebben vergelijkbare chemische reacties.<br><br>
 
 Sommige groepen hebben een naam:<br>
     <ul>
-      <li>elementen uit groep 1 worden alkali-metalen genoemd, met uitzondering van waterstof;</li>
+      <li>elementen uit groep 1 worden alkali-metalen genoemd, met uitzondering van waterstof(H);</li>
       <li>elementen uit groep 2  worden aard-alkali-metalen genoemd;</li>
       <li>elementen uit groep 17 worden halogenen genoemd én</li>
       <li>elementen uit 18 groep worden edelgassen genoemd.</li>
