--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@ uit niets kan  jij bestaan<br>
       <ol>
         <li><a href="#h2_1">Stoffen, stofeigenschappen en dichtheid</a></li>
         <li><a href="#h2_2">Atomen en moleculen</a></li>
-        <li><a href="#h2_3">Het periodiek systeem</a></li> 
+        <li><a href="#h2_3">Het periodiek systeem</a></li>
+        <li><a href="#h2_4">Formules die je moet kennen</a></li>
       </ol>
     </div>
     
@@ -169,6 +170,41 @@ Sommige groepen hebben een naam:<br>
       <li>elementen uit groep 17 worden halogenen genoemd én</li>
       <li>elementen uit 18 groep worden edelgassen genoemd.</li>
   </ul><br><br>
+  </p>
+    <h2 id="h2_4" class="h2">Formules die je moet kennen</h2>
+  <p>De volgende molecuulformules moet je kennen:
+    <button class="formules">H<sub>2</sub> = Waterstof</button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
+    <button class="formules"></button>
   </p>
   <div id="bronnen">
   <h2 id="h2bronnen">Bronnen:</h2>
