--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ Sommige groepen hebben een naam:<br>
   </ul><br><br>
   </p>
     <h2 id="h2_4" class="h2">Formules die je moet kennen</h2>
-  <p>De volgende molecuulformules moet je kennen:
+  <p>De volgende molecuulformules moet je kennen:<br>
     <button class="formules">H<sub>2</sub> = Waterstof</button>
     <button class="formules"></button>
     <button class="formules"></button>
