--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ Sommige groepen hebben een naam:<br>
   <p>De volgende molecuulformules moet je kennen:<br>
     <button class="formules">H<sub>2</sub> = Waterstof</button>
     <button class="formules">N<sub>2</sub> = Stikstof</button>
-    <button class="formules"></button>
+    <button class="formules">Cl<sub>2</sub> = Chloor</button>
     <button class="formules"></button>
     <button class="formules"></button>
     <button class="formules"></button>
