--- a/index.html
+++ b/index.html
@@ -176,32 +176,33 @@ Sommige groepen hebben een naam:<br>
     <button class="formules">H<sub>2</sub> = Waterstof</button>
     <button class="formules">N<sub>2</sub> = Stikstof</button>
     <button class="formules">Cl<sub>2</sub> = Chloor</button>
-    <button class="formules"></button>
-    <button class="formules"></button>
-    <button class="formules"></button>
-    <button class="formules"></button>
-    <button class="formules"></button>
-    <button class="formules"></button>
-    <button class="formules"></button>
-    <button class="formules"></button>
-    <button class="formules"></button>
-    <button class="formules"></button>
-    <button class="formules"></button>
-    <button class="formules"></button>
-    <button class="formules"></button>
-    <button class="formules"></button>
-    <button class="formules"></button>
-    <button class="formules"></button>
-    <button class="formules"></button>
-    <button class="formules"></button>
-    <button class="formules"></button>
-    <button class="formules"></button>
-    <button class="formules"></button>
-    <button class="formules"></button>
-    <button class="formules"></button>
-    <button class="formules"></button>
-    <button class="formules"></button>
-    <button class="formules"></button>
+    <button class="formules">F<sub>2</sub> = Fluor</button>
+    <button class="formules">Br<sub>2</sub> = Broom</button>
+    <button class="formules">I<sub>2</sub> = Jood</button>
+    <button class="formules">O<sub>2</sub> = Zuurstof</button>
+    <button class="formules">C = Koolstof</button>
+    <button class="formules">S<sub>8</sub> = Zwavel</button>
+    <button class="formules">P = Fosfor</button>
+    <button class="formules">He = Helium</button>
+    <button class="formules">Ne = Neon</button>
+    <button class="formules">Ar = Argon</button>
+    <button class="formules">Mg = Magnesium</button>
+    <button class="formules">Al = Aluminium</button>
+    <button class="formules">Si = Silicium</button>
+    <button class="formules">K = Kalium</button>
+    <button class="formules">Ca = Calcium</button>
+    <button class="formules">Fe = IJzer</button>
+    <button class="formules">Ni = Nikkel</button>
+    <button class="formules">Cu = Koper</button>
+    <button class="formules">Zn = Zink</button>
+    <button class="formules">Ag = Zilver</button>
+    <button class="formules">Sn = Tin</button>
+    <button class="formules">Ba = Barium</button>
+    <button class="formules">Pt = Platina</button>
+    <button class="formules">Au = Goud</button>
+    <button class="formules">Hg = Kwik</button>
+    <button class="formules">Pb = Lood</button>
+    <button class="formules">U = Uranium</button>
     <button class="formules"></button>
     <button class="formules"></button>
     <button class="formules"></button>
