--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ Sommige groepen hebben een naam:<br>
     <button class="formules">Hg = Kwik</button>
     <button class="formules">Pb = Lood</button>
     <button class="formules">U = Uranium</button></p>
-  <p>Als je iets verbrandt komt er altijd zuurstof bij, verbranding is in een reactievergelijking altijd + O<sub>2</sub>.<br><br>
+  <p>Als je iets verbrandt, komt er altijd zuurstof bij, verbranding is in een reactievergelijking altijd + O<sub>2</sub>.<br><br>
     Formules van verbinding die je moet kennen:<br>
     <button class="formules"></button>
     <button class="formules"></button>
