--- a/index.html
+++ b/index.html
@@ -203,11 +203,16 @@ Sommige groepen hebben een naam:<br>
     <button class="formules">Hg = Kwik</button>
     <button class="formules">Pb = Lood</button>
     <button class="formules">U = Uranium</button></p>
-  <p>Als je iets verbrandt, komt er altijd zuurstof bij, verbranding is in een reactievergelijking altijd + O<sub>2</sub>.<br><br>
+  <p>Als je iets verbrandt, komt er altijd zuurstof bij, <strong>verbranding is in een reactievergelijking altijd + O<sub>2</sub></strong>.<br><br>
     Formules van verbinding die je moet kennen:<br>
-    <button class="formules"></button>
-    <button class="formules"></button>
-    <button class="formules"></button>
+    <button class="formules">NH<sub>3</sub>(gas) = Ammoniak</button>
+    <button class="formules">C<sub>6</sub>H<sub>12</sub>O<sub>6</sub>	= Glucose</button>
+    <button class="formules">CO<sub>2</sub>	= Koolstofdioxide</button>
+    <button class="formules">CO = Koolstofmonoxide</button>
+    <button class="formules">O<sub>3</sub> = Ozon</button>
+    <button class="formules">H<sub>2</sub>O = Water</button>
+    <button class="formules">H<sub>2</sub>O<sub>2</sub> = Waterstofperoxide</button>
+    <button class="formules">SO<sub>2</sub> = Zwaveldioxide</button>
   </p>
   <div id="bronnen">
   <h2 id="h2bronnen">Bronnen:</h2>
