--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@ Sommige groepen hebben een naam:<br>
     <li>Kooij, S. (2013, september 7).01 Stoffen, stofeigenschappen en dichtheid[Video file]. Retrieved from <a href="https://www.youtube.com/watch?v=B3hDRoaY0YE">https://www.youtube.com/watch?v=B3hDRoaY0YE</a></li>
     <li>Kooij, S. (2013, september 9).02 Atomen en moleculen[Video file]. Retrieved from <a href="https://www.youtube.com/watch?v=7SzSUxM5nZ0">https://www.youtube.com/watch?v=7SzSUxM5nZ0</a></li>
     <li>Kooij, S. (2012, maart 10)2 Het Periodiek Systeem - scheikunde - Scheikundelessen.nl[Video file]. Retrieved from <a href="https://www.youtube.com/watch?v=kZduOIZu7bM&spfreload=10">https://www.youtube.com/watch?v=kZduOIZu7bM&spfreload=10</a></li>
+    <li>Kooij, S. (2012, maart 10)4 Formules die je moet kennen - scheikunde | Scheikundelessen.nl[Video file]. Retrieved from <a href="https://www.youtube.com/watch?v=492a8LNa30Y">https://www.youtube.com/watch?v=492a8LNa30Y</a></li>
 </ol>
   </article>
 </section>
