--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ uit niets kan  jij bestaan<br>
         <li><a href="#h2_2">Atomen en moleculen</a></li>
         <li><a href="#h2_3">Het periodiek systeem</a></li>
         <li><a href="#h2_4">Formules die je moet kennen</a></li>
+        <li><a href="#h2_5">Elementen, verbindingen en ontleden</a></li>
       </ol>
     </div>
     
@@ -213,6 +214,10 @@ Sommige groepen hebben een naam:<br>
     <button class="formules">H<sub>2</sub>O = Water</button>
     <button class="formules">H<sub>2</sub>O<sub>2</sub> = Waterstofperoxide</button>
     <button class="formules">SO<sub>2</sub> = Zwaveldioxide</button>
+  </p>
+      <h2 id="h2_5" class="h2">Elementen, verbindingen en ontleden</h2>
+  <p>Een element is een stof die uit één soort atomen bestaat, dit kunnen separate atomen zijn zoals bijvoorbeeld Helium,<br>
+    of moleculen zoals bijvoorbeeld Chloor, of waterstof die altijd twee aan twee zitten, Chloor en waterstof zijn twee-atomig.<br>
   </p>
   <div id="bronnen">
   <h2 id="h2bronnen">Bronnen:</h2>
