--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ Sommige groepen hebben een naam:<br>
   </p>
       <h2 id="h2_5" class="h2">Elementen, verbindingen en ontleden</h2>
   <p>Een element is een stof die uit één soort atomen bestaat, dit kunnen separate atomen zijn zoals bijvoorbeeld Helium,<br>
-    of moleculen zoals bijvoorbeeld Chloor, of waterstof die altijd twee aan twee zitten, Chloor en waterstof zijn twee-atomig.<br>
+    of moleculen zoals bijvoorbeeld Chloor of waterstof die altijd twee aan twee zitten, Chloor en waterstof zijn twee-atomig.<br>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f2/H2_model.svg/1920px-H2_model.svg.png" alt="afbeelding van waterstof model" width="100">
   </p>
   <div id="bronnen">
