--- a/index.html
+++ b/index.html
@@ -218,7 +218,10 @@ Sommige groepen hebben een naam:<br>
       <h2 id="h2_5" class="h2">Elementen, verbindingen en ontleden</h2>
   <p>Een element is een stof die uit één soort atomen bestaat, dit kunnen separate atomen zijn zoals bijvoorbeeld Helium,<br>
     of moleculen zoals bijvoorbeeld Chloor of waterstof, die altijd twee aan twee zitten, Chloor en waterstof zijn twee-atomig.<br>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f2/H2_model.svg/1920px-H2_model.svg.png" alt="afbeelding van waterstof model" width="100">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f2/H2_model.svg/1920px-H2_model.svg.png" alt="afbeelding van waterstof model" width="100"><br><br>
+    Ontleden is het kapotmaken van moleculen, waardoor er nieuwe moleculen ontstaan met nieuwe eigenschappen.<br><br>
+    Een element kun je <strong><em>niet</em></strong> ontleden, omdat ze uit één atoomsoort bestaan.<br>
+    Een verbinding kun je <strong><em>wel</em></strong> ontleden, omdat ze uit verschillende atoomsoorten bestaan.<br> 
   </p>
   <div id="bronnen">
   <h2 id="h2bronnen">Bronnen:</h2>
