--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ Sommige groepen hebben een naam:<br>
     <button class="formules">Pb = Lood</button>
     <button class="formules">U = Uranium</button></p>
   <p>Als je iets verbrandt, komt er altijd zuurstof bij, <strong>verbranding is in een reactievergelijking altijd + O<sub>2</sub></strong>.<br><br>
-    Formules van verbinding die je moet kennen:<br>
+    Formules van verbindingen die je moet kennen:<br>
     <button class="formules">NH<sub>3</sub>(gas) = Ammoniak</button>
     <button class="formules">C<sub>6</sub>H<sub>12</sub>O<sub>6</sub>	= Glucose</button>
     <button class="formules">CO<sub>2</sub>	= Koolstofdioxide</button>
