--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ uit niets kan  jij bestaan<br>
   
     <div id="inhoud">
       <h2>Inhoud:</h2>
+      <button class="formules">Stoffen, stofeigenschappen en dichtheid</button>
       <ol>
         <li><a href="#h2_1">Stoffen, stofeigenschappen en dichtheid</a></li>
         <li><a href="#h2_2">Atomen en moleculen</a></li>
