--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   
   <article>
   <h2>Een samenvatting van de basisbeginselen</h2>
-  <img src="https://4.bp.blogspot.com/-sC1kpLXKzDA/VAByloRPDAI/AAAAAAAAAdw/1Gk4hy7DGis/w530-h389-p-k/jip%2Ben%2Bjanneke.png" alt="Afbeeldinig van Jip en Janneke" width="300">
+  <img id="jj" src="https://4.bp.blogspot.com/-sC1kpLXKzDA/VAByloRPDAI/AAAAAAAAAdw/1Gk4hy7DGis/w530-h389-p-k/jip%2Ben%2Bjanneke.png" alt="Afbeeldinig van Jip en Janneke" width="300">
 
   <div id="gedicht">
 <p>uit niets ben jij gekomen<br>
