--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <article>
   <h2>Een samenvatting van de basisbeginselen</h2>
   <div id="gedicht">
-<p>
+<p id="gedicht">
 uit niets ben jij gekomen<br>
 tot niets zal jij vergaan<br>
 <br>
@@ -52,7 +52,7 @@ uit niets kan  jij bestaan<br>
   
     <div id="inhoud">
       <h2>Inhoud:</h2>
-      <button class="formules">Stoffen, stofeigenschappen en dichtheid</button>
+      <button class="inhoud">Stoffen, stofeigenschappen en dichtheid</button>
       <ol>
         <li><a href="#h2_1">Stoffen, stofeigenschappen en dichtheid</a></li>
         <li><a href="#h2_2">Atomen en moleculen</a></li>
