--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ uit niets ben jij gaan leven<br>
 uit niets kan  jij bestaan<br>
     <img id="jj" src="https://4.bp.blogspot.com/-sC1kpLXKzDA/VAByloRPDAI/AAAAAAAAAdw/1Gk4hy7DGis/w530-h389-p-k/jip%2Ben%2Bjanneke.png" alt="Afbeeldinig van Jip en Janneke" width="300">
     </p>
-</div>
+</div><br><br>
   
     <div id="inhoud">
       <h2>Inhoud:</h2>
