--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div id="gedicht">
 <p id="gedicht">
       <img id="jj" src="https://4.bp.blogspot.com/-sC1kpLXKzDA/VAByloRPDAI/AAAAAAAAAdw/1Gk4hy7DGis/w530-h389-p-k/jip%2Ben%2Bjanneke.png" alt="Afbeeldinig van Jip en Janneke" width="300">
-uit niets ben jij gekomen<br>
+<em>uit niets ben jij gekomen<br>
 tot niets zal jij vergaan<br>
 <br>
 uit niets ben ik gaan leven<br>
@@ -46,7 +46,7 @@ uit niets ben ik gekomen<br>
 tot niets zal ik vergaan<br>
 <br>
 uit niets ben jij gaan leven<br>
-uit niets kan  jij bestaan<br>
+uit niets kan  jij bestaan</em><br>
     </p>
 </div><br><br>
   
