--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@ uit niets kan  jij bestaan</em><br>
   
     <div id="inhoud">
       <h2>Inhoud:</h2>
-      <button class="inhoud">Stoffen, stofeigenschappen en dichtheid</button>
-      <ol>
-        <li><a href="#h2_1">Stoffen, stofeigenschappen en dichtheid</a></li>
-        <li><a href="#h2_2">Atomen en moleculen</a></li>
-        <li><a href="#h2_3">Het periodiek systeem</a></li>
-        <li><a href="#h2_4">Formules die je moet kennen</a></li>
-        <li><a href="#h2_5">Elementen, verbindingen en ontleden</a></li>
-      </ol>
+      <button class="inhoud"><a href="#h2_1">Stoffen, stofeigenschappen en dichtheid</a></button>
+      <button class="inhoud"><a href="#h2_2">Atomen en moleculen</a></button>
+      <button class="inhoud"><a href="#h2_3">Het periodiek systeem</a></button>
+      <button class="inhoud"><a href="#h2_4">Formules die je moet kennen</a></button>
+      <button class="inhoud"><a href="#h2_5">Elementen, verbindingen en ontleden</a></button>      
+      <button class="inhoud"></button>
+      <button class="inhoud"></button>        
+
     </div>
     
   <h2 id="h2_1" class="h2">Stoffen, stofeigenschappen en dichtheid</h2>
