--- a/index.html
+++ b/index.html
@@ -49,16 +49,15 @@ uit niets kan  jij bestaan</em><br>
     </p>
 <br><br>
   
-    <div id="inhoud">
+    <div id="idheader">
       <h2>Inhoud:</h2>
-      <button class="inhoud"><a href="#h2_1">Stoffen, stofeigenschappen en dichtheid</a></button>
-      <button class="inhoud"><a href="#h2_2">Atomen en moleculen</a></button>
-      <button class="inhoud"><a href="#h2_3">Het periodiek systeem</a></button>
-      <button class="inhoud"><a href="#h2_4">Formules die je moet kennen</a></button>
-      <button class="inhoud"><a href="#h2_5">Elementen, verbindingen en ontleden</a></button>      
-      <button class="inhoud"></button>
-      <button class="inhoud"></button>        
-
+      <button class="liheader"><a href="#h2_1">Stoffen, stofeigenschappen en dichtheid</a></button>
+      <button class="liheader"><a href="#h2_2">Atomen en moleculen</a></button>
+      <button class="liheader"><a href="#h2_3">Het periodiek systeem</a></button>
+      <button class="liheader"><a href="#h2_4">Formules die je moet kennen</a></button>
+      <button class="liheader"><a href="#h2_5">Elementen, verbindingen en ontleden</a></button>      
+      <button class="liheader"></button>
+      <button class="liheader"></button>        
     </div>
     
   <h2 id="h2_1" class="h2">Stoffen, stofeigenschappen en dichtheid</h2>
