--- a/index.html
+++ b/index.html
@@ -49,16 +49,17 @@ uit niets kan  jij bestaan</em><br>
     </p>
 <br><br>
   
-    <div id="idheader">
+
       <h2>Inhoud:</h2>
-      <button class="liheader"><a href="#h2_1">Stoffen, stofeigenschappen en dichtheid</a></button>
-      <button class="liheader"><a href="#h2_2">Atomen en moleculen</a></button>
-      <button class="liheader"><a href="#h2_3">Het periodiek systeem</a></button>
-      <button class="liheader"><a href="#h2_4">Formules die je moet kennen</a></button>
-      <button class="liheader"><a href="#h2_5">Elementen, verbindingen en ontleden</a></button>      
-      <button class="liheader"></button>
-      <button class="liheader"></button>        
-    </div>
+      <ul id="idheader">
+      <li class="liheader"><a href="#h2_1">Stoffen, stofeigenschappen en dichtheid</a></li>
+      <li class="liheader"><a href="#h2_2">Atomen en moleculen</a></li>
+      <li class="liheader"><a href="#h2_3">Het periodiek systeem</a></li>
+      <li class="liheader"><a href="#h2_4">Formules die je moet kennen</a></li>
+      <li class="liheader"><a href="#h2_5">Elementen, verbindingen en ontleden</a></li>      
+      <li class="liheader"></button>
+      <li class="liheader"></button>        
+    </ul>
     
   <h2 id="h2_1" class="h2">Stoffen, stofeigenschappen en dichtheid</h2>
   <p>Alles om ons heen in het gehele heelal, bestaat uit stoffen en dat zijn er miljoenen, miljoenen en miljoenen<br>
