--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <article>
   <h2>Een samenvatting van de basisbeginselen</h2>
 <p id="gedicht">
-<img id="jj" src="https://4.bp.blogspot.com/-sC1kpLXKzDA/VAByloRPDAI/AAAAAAAAAdw/1Gk4hy7DGis/w530-h389-p-k/jip%2Ben%2Bjanneke.png" alt="Afbeeldinig van Jip en Janneke" style="width:170px;height:170px;margin-left:15px;>
+<img id="jj" src="https://4.bp.blogspot.com/-sC1kpLXKzDA/VAByloRPDAI/AAAAAAAAAdw/1Gk4hy7DGis/w530-h389-p-k/jip%2Ben%2Bjanneke.png" alt="Afbeeldinig van Jip en Janneke" style="width:170px;margin-left:15px;>
 
 <em>uit niets ben jij gekomen<br>
 tot niets zal jij vergaan<br>
@@ -49,7 +49,7 @@ uit niets ben jij gaan leven<br>
 uit niets kan  jij bestaan</em><br>
     </p>
 <br><br>
-  
+
 
       <h2>Inhoud:</h2>
       <ul id="idheader">
